# vck-ojt

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  .uv-tools.toml  CONTRIBUTING.md  README.md  README.md.additions  pyproject.toml  rate_limit_config.example.json  requirements-dev-legacy.txt  requirements-dev.txt  requirements-legacy.txt  requirements.txt  supabase_setup.py
docs/: architecture-requirements.md
scripts/: setup_env.py
src/: App.css  App.jsx  index.css
src/components/Chatbot/: ChatbotComponents.jsx
src/components/Footer/: Footer.css  Footer.jsx
src/components/Header/: Header.css  Header.jsx
src/hooks/: useOnlineStatus.js
src/pages/: AboutPage.jsx  AdmissionPage.jsx  ContactPage.jsx  CoursesPage.jsx  HomePage.jsx
src/styles/: HomePage.css  Pages.css
src/utils/: aiService.js  constants.js
tests/: __init__.py  conftest.py
tests/unit/: mock_openai.py  test_base_agent.py
travel_planner/: __init__.py  config.py  main.py
travel_planner/agents/: __init__.py  accommodation.py  activity_planning.py  base.py  budget_management.py  destination_research.py  flight_search.py  orchestrator.py  transportation.py
travel_planner/data/: models.py  setup.py  supabase.py
travel_planner/data/migrations/: 01_initial_schema.sql  02_versioning_and_pagination.sql  03_api_rate_limiting.sql  README.md
travel_planner/orchestration/: parallel.py  state_graph.py  workflow.py
travel_planner/orchestration/core/: graph_builder.py
travel_planner/orchestration/nodes/: __init__.py  accommodation_search.py  base_node.py  budget_management.py  final_plan.py  flight_search.py  parallel_search.py  query_analysis.py  transportation_planning.py
travel_planner/orchestration/routing/: error_recovery.py
travel_planner/orchestration/states/: planning_state.py  workflow_stages.py
travel_planner/utils/: __init__.py  error_handling.py  helpers.py  logging.py  rate_limiting.py
